--- a/src/MK.Accountancy.Blazor/Pages/Invoices/InvoiceMoventEditPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Invoices/InvoiceMoventEditPage.razor
@@ -32,7 +32,7 @@
                                      ValueFieldName="@nameof(ComboboxEnumItem<InvoiceDetailType>.Value)">
                 </DevComboboxEnumEdit>
                 <DevButonEdit ButtonClickInvokeFunction="() => {
-                                StoreService.BeforeShowPopupListPage(Service.TempDataSource.StoryId);}"
+                                StoreService.BeforeShowPopupListPage(Service.TempDataSource.StoreId);}"
                               Caption="@L["Warehouse"]"
                               ColumnIndex="6"
                               ColumnSpan="3"
