--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -47,6 +47,7 @@
 @using MK.Accountancy.Parameters
 @using MK.Accountancy.Blazor.Pages.Parameters
 @using MK.Accountancy.Invoices
+@using MK.Accountancy.Receipts
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
