--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -26,6 +26,7 @@
 @using MK.Accountancy.Banks
 @using MK.Accountancy.Blazor.Pages.BankDepartments
 @using MK.Accountancy.BankAccounts
+@using MK.Accountancy.Blazor.Pages.BankAccounts
 @using MK.Blazor.Core.Models
 @using MK.Accountancy.Blazor.Pages.Banks
 @using MK.Accountancy.Currents
@@ -38,6 +39,7 @@
 @using MK.Accountancy.Blazor.Pages.ServicePages
 @using MK.Accountancy.Blazor.Pages.Units
 @using MK.Accountancy.Safes
+@using MK.Accountancy.Blazor.Pages.Safes
 @using MK.Accountancy.Expenses
 @using MK.Accountancy.Blazor.Pages.Expenses
 @using MK.Accountancy.Stocks
