--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -50,6 +50,7 @@
 @using MK.Accountancy.Blazor.Pages.Parameters
 @using MK.Accountancy.Invoices
 @using MK.Accountancy.Receipts
+@using MK.Accountancy.PaymentDocuments
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
