--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -51,6 +51,7 @@
 @using MK.Accountancy.Invoices
 @using MK.Accountancy.Receipts
 @using MK.Accountancy.PaymentDocuments
+@using MK.Accountancy.Blazor.Pages.PaymentDocuments
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
