--- a/src/MK.Blazor.Core/Components/Commons/Loadings/CircleLoading.razor
+++ b/src/MK.Blazor.Core/Components/Commons/Loadings/CircleLoading.razor
@@ -16,7 +16,7 @@
 
         .splash-screen .spinner-border {
             border: .2em solid;
-            border-color: #5f368d #bfbfbf #bfbfbf;
+            border-color: orangered #bfbfbf #bfbfbf;
             width: 120px;
             height: 120px;
         }
