--- a/src/MK.Blazor.Core/Components/DevComp/DataViewers/DevMoventDataGrid.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataViewers/DevMoventDataGrid.razor
@@ -87,7 +87,7 @@
     [Parameter] public bool ToolbarDeleteButtonVisible { get; set; } = true;
     [Parameter] public string ToolbarDropDownButton1IconCssClass { get; set; } = "newimage";
     [Parameter] public string ToolbarDropDownButton1Text { get; set; }
-    [Parameter] public string ToolbarDropDownButton2IconCssClass { get; set; } = "newtable";
+    [Parameter] public string ToolbarDropDownButton2IconCssClass { get; set; } = "tableimage";
     [Parameter] public string ToolbarDropDownButton2Text { get; set; }
     [Parameter] public ToolbarRenderStyleMode ToolbarItemRenderStyleMode { get; set; } = ToolbarRenderStyleMode.Plain;
     [Parameter]
